welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:12: error: ';' expected but 'else' found.
    else {gauche(); if (isFacingTrail()==true) { avance()
    ^SlugHunting:29: error: expected class or object definition
def isFacingTrail():Boolean = { 
^SlugHunting:49: error: Unmatched closing brace '}' ignored here
}
^