welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while (estSurBiscuit()==false) {
    baisseBrosse()
    if (isFacingTrail()==true) {
      avance()
      
    } else {gauche(); if (isFacingTrail()==true) { avance()
      
    }}
    
    else {gauche(); if (isFacingTrail()==true) { avance()
      
    }}
    
    else {gauche(); if (isFacingTrail()==true) { avance()
      
    }}
    
    else {gauche(); if (isFacingTrail()==true) { avance()
      
    }}
    }
    
  }
    
}

def isFacingTrail():Boolean = { 
  var test = false
  if (estFaceMur()==true) {
    gauche()
  }
  avance()
  if (getCouleurSol()==Color.green) {
    recule()
    test = true
    return test;
    
  } else {
    recule()
    return test;
    
    }
  
    
}